--- a/air-transport.html
+++ b/air-transport.html
@@ -162,7 +162,7 @@
             <div class="col-lg-8 col-12 order-lg-2">
                 <div class="service-single-wrap">
                     <div class="title-image">
-                        <img src="assets/images/service-single/img-2.jpg" alt="Air Freight by Netline Cargo Ltd">
+                        <img src="assets/images/cargo/cargo-airplane-flying-above-logistic-container-ai-2025-01-29-04-39-52-utc.webp" alt="Air Freight by Netline Cargo Ltd">
                     </div>
 
                     <h2>Air Freight Services</h2>
@@ -181,12 +181,12 @@
 
                     <div class="video-wrap">
                         <div class="video-img">
-                            <img src="assets/images/service-single/video.jpg" alt="Netline Cargo Overview">
-                            <div class="video-holder">
+                            <img src="assets/images/cargo/loading-of-cargo-containers-to-plane-at-airport-2025-02-16-09-40-30-utc.webp" alt="Netline Cargo Overview">
+                            <!-- <div class="video-holder">
                                 <a href="https://www.youtube.com/embed/7Jv48RQ_2gk" class="video-btn" data-type="iframe">
                                     <i class="flaticon-play-button-arrowhead"></i>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="video-content">
                             <h2>Why Choose Netline Cargo?</h2>
@@ -208,16 +208,16 @@
                     </p>
 
                     <h3 class="quate">
-                        “Delivering your world to Kenya faster, safer, and with unmatched professionalism.”
+                        “Delivering your goods to Kenya faster, safer, and with unmatched professionalism.”
                     </h3>
 
                     <div class="image-gallery">
                         <h2>Our Capability Highlights:</h2>
                         <ul>
-                            <li><img src="assets/images/image-gallery/1.jpg" alt="Cargo Handling"></li>
-                            <li><img src="assets/images/image-gallery/2.jpg" alt="Customs Coordination"></li>
-                            <li><img src="assets/images/image-gallery/3.jpg" alt="Secure Storage"></li>
-                            <li><img src="assets/images/image-gallery/4.jpg" alt="Rapid Delivery"></li>
+                            <li><img src="assets/images/cargo/loading-of-cargo-containers-to-plane-at-airport-2025-02-16-09-41-06-utc.webp" alt="Cargo Handling"></li>
+                            <li><img src="assets/images/netline/clear-airplane-in-the-sky-2023-11-27-05-37-19-utc.webp" alt="Customs Coordination"></li>
+                            <li><img src="assets/images/cargo/loading-of-luggage-to-airplane-2025-02-16-11-53-10-utc.webp" alt="Secure Storage"></li>
+                            <li><img src="assets/images/cargo/large-airport-with-cars-containers-and-planes-2025-02-12-18-37-48-utc.webp" alt="Rapid Delivery"></li>
                         </ul>
                     </div>
 
