--- a/ocean-transport.html
+++ b/ocean-transport.html
@@ -162,7 +162,7 @@
             <div class="col-lg-8 col-12 order-lg-2">
                 <div class="service-single-wrap">
                     <div class="title-image">
-                        <img src="assets/images/service-single/img-4.jpg" alt="Ocean Transport by Netline Cargo Ltd">
+                        <img src="assets/images/cargo/container-ship-in-the-sea-2025-01-07-23-13-37-utc.webp" alt="Ocean Transport by Netline Cargo Ltd">
                     </div>
                     <h2>Ocean Transport</h2>
                     <p>
@@ -176,12 +176,12 @@
                     </p>
                     <div class="video-wrap">
                         <div class="video-img">
-                            <img src="assets/images/service-single/video.jpg" alt="Netline Cargo Ocean Transport Overview">
-                            <div class="video-holder">
+                            <img src="assets/images/cargo/aerial-drone-view-of-large-car-cargo-ship-entering-2025-03-13-13-16-10-utc.webp" alt="Netline Cargo Ocean Transport Overview">
+                            <!-- <div class="video-holder">
                                 <a href="https://www.youtube.com/embed/7Jv48RQ_2gk" class="video-btn" data-type="iframe">
                                     <i class="flaticon-play-button-arrowhead"></i>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="video-content">
                             <h2>Why Choose Netline Cargo Sea Services?</h2>
@@ -205,10 +205,10 @@
                     <div class="image-gallery">
                         <h2>Our Ocean Service Highlights:</h2>
                         <ul>
-                            <li><img src="assets/images/image-gallery/1.jpg" alt="Container Loading"></li>
-                            <li><img src="assets/images/image-gallery/2.jpg" alt="Vessel Tracking"></li>
-                            <li><img src="assets/images/image-gallery/3.jpg" alt="Port Handling"></li>
-                            <li><img src="assets/images/image-gallery/4.jpg" alt="Cargo Unloading"></li>
+                            <li><img src="assets/images/cargo/aerial-view-of-container-cargo-ship-with-container-2025-01-10-00-16-55-utc.webp" alt="Container Loading"></li>
+                            <li><img src="assets/images/cargo/aerial-view-of-cargo-ship-at-dock-2025-03-09-11-27-38-utc.webp" alt="Vessel Tracking"></li>
+                            <li><img src="assets/images/cargo/stacked-of-container-cargo-with-rainway-in-contain-2025-03-24-19-25-43-utc.webp" alt="Port Handling"></li>
+                            <li><img src="assets/images/cargo/tugboat-pull-container-cargo-ship-vessel-to-cargo-2024-12-08-00-49-26-utc.webp" alt="Cargo Unloading"></li>
                         </ul>
                     </div>
                     <div class="accordion">
