--- a/online.html
+++ b/online.html
@@ -194,7 +194,7 @@
             <div class="col-lg-8 col-12 order-lg-2">
                 <div class="service-single-wrap">
                     <div class="title-image">
-                        <img src="assets/images/service-single/img-5.jpg" alt="Assisted Online Buying by Netline Cargo Ltd">
+                        <img src="assets/images/cargo/close-up-hands-holding-credit-card-typing-on-the-2025-02-12-22-34-28-utc.webp" alt="Assisted Online Buying by Netline Cargo Ltd">
                     </div>
 
                     <h2>Assisted Online Buying</h2>
@@ -211,12 +211,12 @@
 
                     <div class="video-wrap">
                         <div class="video-img">
-                            <img src="assets/images/service-single/video.jpg" alt="Netline Cargo Online Buying Overview">
-                            <div class="video-holder">
+                            <img src="assets/images/netline/woman-hand-using-mobile-phone-to-pay-contactless-2023-11-27-05-29-00-utc.webp" alt="Netline Cargo Online Buying Overview">
+                            <!-- <div class="video-holder">
                                 <a href="https://www.youtube.com/embed/7Jv48RQ_2gk" class="video-btn" data-type="iframe">
                                     <i class="flaticon-play-button-arrowhead"></i>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="video-content">
                             <h2>Why Choose Our Buying Service?</h2>
@@ -243,10 +243,10 @@
                     <div class="image-gallery">
                         <h2>Key Service Benefits:</h2>
                         <ul>
-                            <li><img src="assets/images/image-gallery/1.jpg" alt="Product Sourcing"></li>
-                            <li><img src="assets/images/image-gallery/2.jpg" alt="Order Placement"></li>
-                            <li><img src="assets/images/image-gallery/3.jpg" alt="Payment Handling"></li>
-                            <li><img src="assets/images/image-gallery/4.jpg" alt="Shipment Consolidation"></li>
+                            <li><img src="assets/images/netline/image.png" alt="Product Sourcing"></li>
+                            <li><img src="assets/images/netline/vehicles-carrier-in-the-sea-2023-11-27-05-14-52-utc.webp" alt="Order Placement"></li>
+                            <li><img src="assets/images/cargo/laptop-beauty-or-woman-online-shopping-with-credi-2025-04-06-08-19-29-utc.webp" alt="Payment Handling"></li>
+                            <li><img src="assets/images/cargo/the-plane-follows-the-navigation-route-2025-03-18-16-52-10-utc.webp" alt="Shipment Consolidation"></li>
                         </ul>
                     </div>
 
