--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                 <div class="row">
                     <div class="col col-xs-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>International Logistics</h2>
+                            <h2>Netline Cargo</h2>
                             <h3>About us</h3>
                         </div>
                     </div>
