--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
                 <div class="row">
                     <div class="col col-xs-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>Internation Logistics</h2>
+                            <h2>Netline Cargo</h2>
                             <h3>Contact Us</h3>
                         </div>
                     </div>
@@ -224,9 +224,9 @@
                         <div class="col-lg-6 col-12">
                             <div class="contact-left">
                                 <h2>Get in touch</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit mattis
-                                    faucibus odio feugiat arc dolor.</p>
-                                <img class="image" src="assets/images/contact-left-img.jpg" alt="">
+<p>Have questions or need assistance? Our team is here to help with your shipping and logistics needs. Reach out today for support or a custom quote.</p>
+
+                                <img class="image" src="assets/images/netline/closeup-image-of-toy-plane-and-earth-globe-on-tabl-2023-12-19-13-26-37-utc.webp" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6 col-12">
@@ -251,9 +251,14 @@
                                         <label><i class="flaticon-edit"></i></label>
                                     </div>
                                     <div class="input-item submitbtn">
-                                        <input class="fild" type="submit" value="Get In Touch">
+                                        <input class="fild" type="submit" value="Submit">
                                         <label><i class="flaticon-send"></i></label>
-                                    </div>
+                                    </div> <br>
+                                    <div class="input-item submitbtn">
+    <button class="fild" onclick="window.location.href='pricing.html'">Get a Quote</button>
+    <label><i class="flaticon-order"></i></label>
+</div>
+
                                 </form>
                             </div>
                         </div>
