--- a/services.html
+++ b/services.html
@@ -146,7 +146,7 @@
                 <div class="row">
                     <div class="col col-xs-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>International Logistics</h2>
+                            <h2>Netline Cargo</h2>
                             <h3>Services</h3>
                         </div>
                     </div>
@@ -600,6 +600,9 @@
     <script src="assets/js/jquery-plugin-collection.js"></script>
     <!-- Custom script for this template -->
     <script src="assets/js/script.js"></script>
+    <script>
+        
+    </script>
 </body>
 
 </html>
