--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                                                 <li><a href="online.html">Online Buying</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="shop.html">Shop Online</a></li>
+                                        <!-- <li><a href="shop.html">Shop Online</a></li> -->
                                         <li><a href="about.html">About </a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
