--- a/index-2.html
+++ b/index-2.html
@@ -112,13 +112,13 @@
                                                 <li><a href="ocean-transport.html">Ocean transport</a></li>
                                             </ul>
                                         </li>
-                                        <li class="menu-item-has-children">
+                                        <!-- <li class="menu-item-has-children">
                                             <a href="#">Shop Online</a>
                                             <ul class="sub-menu">
                                                 <li><a href="shop.html">Shop</a></li>
                                                 
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <li><a href="about.html">About </a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
