--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Air,Ocean,Logistics,Netline Cargo">
     <meta name="description" content="Netline Cargo Limited is a leading logistics and cargo service provider, specializing in air and ocean transport.">
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/logo/Orange NLC.svg">
     <title>Services - Netline Cargo Limited</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon_logistics.css" rel="stylesheet">
