--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Air,Ocean,Logistics">
     <meta name="description" content="Netline Cargo Ltd is a leading international shipping logistics company — we specialize in the seamless transport of goods from abroad to Kenya via air and sea freight.">
-    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/images/logo/Orange NLC.svg">
     <title>Our Team - Netline Cargo Limited</title>
     <link href="assets/css/themify-icons.css" rel="stylesheet">
     <link href="assets/css/flaticon_logistics.css" rel="stylesheet">
