--- a/online.html
+++ b/online.html
@@ -243,7 +243,7 @@
                     <div class="image-gallery">
                         <!-- <h2>Key Service Benefits:</h2> -->
                         <ul>
-                            <li><img src="assets/images/cargo/images (2).jpeg" alt="Product Sourcing"></li>
+                            <li><img src="assets/images/cargo/mobile-money-kenya-gdp.webp" alt="Product Sourcing"></li>
                             <li><img src="assets/images/netline/vehicles-carrier-in-the-sea-2023-11-27-05-14-52-utc.webp" alt="Order Placement"></li>
                             <li><img src="assets/images/cargo/laptop-beauty-or-woman-online-shopping-with-credi-2025-04-06-08-19-29-utc.webp" alt="Payment Handling"></li>
                             <li><img src="assets/images/cargo/the-plane-follows-the-navigation-route-2025-03-18-16-52-10-utc.webp" alt="Shipment Consolidation"></li>
