--- a/faq.html
+++ b/faq.html
@@ -430,7 +430,7 @@
                     <div class="row">
                         <div class="col col-xs-12">
                             <p class="copyright"> &copy; 2025 <a href="index.html">Netline Cargo Ltd</a> All
-                                rights reserved. | Powered By  </p>  <a href="https://www.axetech.africa/">Axetech Africa</a>
+                                rights reserved. | Powered By   <a href="https://www.axetech.africa/" sty>Axetech Africa</a>  </p>
                         </div>
                     </div>
                 </div>
