--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 <div class="hero-wrap">
                     <div class="row">
                         <div class="col-lg-6 col-12">
-                            <h2>International Cargo Shipping</h2>
-                            <h3>Flexible <span>logistic</span>
+                            <h2>Netline Cargo Limited</h2>
+                            <h3>Flexible <span>logistics</span>
                                 & cargo service</h3>
                             <p>Netline Cargo - Flexible logistics and cargo service provider, offering tailored solutions to
                                 meet
