--- a/index.html
+++ b/index.html
@@ -44,6 +44,37 @@
 
         <!-- Start header -->
         <header id="header">
+            <div class="topbar">
+                <div class="container-fluid">
+                    <div class="row align-items-center">
+                        <div class="col-lg-5 col-12">
+                            <ul class="contact-info">
+                                <li>
+                                    <i class="ti-email"></i><span>support@logistika.com</span>
+                                </li>
+                                <li>
+                                    <a href="tel:+887869587496">
+                                        <i class="flaticon-call"></i><span>+88 7869 5874 96</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-7 col-12">
+                            <div class="contact-into">
+                               
+                                <ul class="social-media">
+                                    <li><span>Follow Us :</span></li>
+                                    <li><a href="#"><i class="flaticon-facebook-app-symbol"></i></a></li>
+                                    <li><a href="#"><i class="flaticon-linkedin-big-logo"></i></a></li>
+                                    <li><a href="#"><i class="flaticon-twitter"></i></a></li>
+                                    <li><a href="#"><i class="flaticon-vimeo"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- end topbar -->
             <div class="wpo-site-header wpo-site-header-s3">
                 <nav class="navigation navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
