--- a/air-transport.html
+++ b/air-transport.html
@@ -221,44 +221,75 @@
                         </ul>
                     </div>
 
-                    <div class="accordion">
-                        <div class="accordion-item">
-                            <button class="accordion-header">How do I book an air shipment?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Contact our customer care team with details of your cargo dimensions and weight. 
-                                    We will provide an instant quote and guide you through the booking process.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item active">
-                            <button class="accordion-header">What documentation is required?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    You need a commercial invoice, packing list, and export license (if applicable). 
-                                    Our team will review your documents and ensure compliance before departure.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Can I combine air and sea freight?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Yes. We offer intermodal solutions that seamlessly switch between air and sea, 
-                                    optimizing cost and transit time for your shipments.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">How do I track my shipment?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Simply contact our operations team with your booking reference and we’ll 
-                                    provide real‑time status updates until delivery in Kenya.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                   <div class="accordion">
+  <div class="accordion-item">
+    <button class="accordion-header">What countries do you ship cargo from?</button>
+    <div class="accordion-content">
+      <p>
+        We ship cargo from major hubs worldwide, including the USA, UK, China, UAE, India, and Turkey. Contact us for specific routes.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item active">
+    <button class="accordion-header">How long does air cargo shipping to Kenya take?</button>
+    <div class="accordion-content">
+      <p>
+        Typical transit times range from 3 to 10 days depending on the origin country, customs clearance, and cargo type.
+      </p>
+    </div>
+  </div>
+  
+  <div class="accordion-item">
+    <button class="accordion-header">What types of cargo do you handle?</button>
+    <div class="accordion-content">
+      <p>
+        We handle general goods, electronics, perishables, documents, machinery, and household items. Hazardous goods require special handling—please inquire.
+      </p>
+    </div>
+  </div>
+ 
+  <div class="accordion-item">
+    <button class="accordion-header">How is customs clearance handled?</button>
+    <div class="accordion-content">
+      <p>
+        We manage all customs documentation and clearance to ensure your cargo moves smoothly through Kenyan customs.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">What are the shipping costs?</button>
+    <div class="accordion-content">
+      <p>
+        Costs vary based on weight, volume, destination, and service type. Request a free, no-obligation quote via our website or customer service.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">Can I insure my cargo?</button>
+    <div class="accordion-content">
+      <p>
+        Yes, we offer insurance options to protect your shipment against loss or damage during transit.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">What payment methods do you accept?</button>
+    <div class="accordion-content">
+      <p>
+        We accept bank transfers, mobile money (M-Pesa), and major credit/debit cards.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">How do I book a shipment?</button>
+    <div class="accordion-content">
+      <p>
+        Contact us via phone, email, or fill out our online get quote form. Our team will guide you through the process.
+      </p>
+    </div>
+  </div>
+</div>
+
                 </div>
             </div>
 
