--- a/ocean-transport.html
+++ b/ocean-transport.html
@@ -211,43 +211,75 @@
                             <li><img src="assets/images/cargo/tugboat-pull-container-cargo-ship-vessel-to-cargo-2024-12-08-00-49-26-utc.webp" alt="Cargo Unloading"></li>
                         </ul>
                     </div>
-                    <div class="accordion">
-                        <div class="accordion-item">
-                            <button class="accordion-header">How do I book an ocean shipment?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Provide cargo details—dimensions, weight, and origin port—and we’ll send you a tailored quote  
-                                    and handle all vessel bookings on your behalf.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item active">
-                            <button class="accordion-header">What are typical transit times?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Standard transit ranges from 18–25 days from Europe, 20–30 days from Asia, and 25–35 days from the Americas.  
-                                    We’ll recommend the fastest, most cost‑effective route.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Can I insure my ocean cargo?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Yes—marine cargo insurance is available to protect against loss or damage, with customizable coverage options for your peace of mind.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Do you offer door‑to‑door delivery?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Absolutely. We coordinate inland pickup at origin and final delivery in Kenya,  
-                                    providing a single, seamless logistics solution.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                   <div class="accordion">
+ 
+  <div class="accordion-item active">
+    <button class="accordion-header">How long does ocean freight to Kenya usually take?</button>
+    <div class="accordion-content">
+      <p>
+        Transit times range from 14 to 45 days depending on the origin port, route, and vessel schedule.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">What types of cargo can be shipped via ocean freight?</button>
+    <div class="accordion-content">
+      <p>
+        We handle containerized cargo, bulk shipments, machinery, vehicles, perishables (in refrigerated containers), and hazardous goods with special permits.
+      </p>
+    </div>
+  </div>
+  
+  <div class="accordion-item">
+    <button class="accordion-header">What are the size and weight limits for ocean shipments?</button>
+    <div class="accordion-content">
+      <p>
+        We accommodate standard container sizes (20ft, 40ft) and oversized cargo with advance arrangements.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">How is customs clearance handled for ocean freight?</button>
+    <div class="accordion-content">
+      <p>
+        Our clearance experts handle all import documentation and liaise with Kenyan authorities to ensure timely processing.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">What are the costs involved in ocean shipping?</button>
+    <div class="accordion-content">
+      <p>
+        Shipping costs include freight charges, port fees, customs duties, handling fees, and any additional services requested.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">Can I insure my shipment?</button>
+    <div class="accordion-content">
+      <p>
+        Yes, we offer insurance options to protect your cargo against loss or damage during sea transit.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">What payment methods do you accept?</button>
+    <div class="accordion-content">
+      <p>
+        We accept bank transfers, mobile money (M-Pesa), and major credit/debit cards.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">How do I book an ocean shipment?</button>
+    <div class="accordion-content">
+      <p>
+        Reach out via phone, email, or simply fill in our online get quote form. Our logistics team will assist you with booking and preparation.
+      </p>
+    </div>
+  </div>
+</div>
+
                 </div>
             </div>
             <div class="col-lg-4 col-12 order-lg-1">
