--- a/online.html
+++ b/online.html
@@ -250,40 +250,89 @@
                         </ul>
                     </div>
 
-                    <div class="accordion">
-                        <div class="accordion-item">
-                            <button class="accordion-header">How do I submit my shopping list?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Simply email or upload your desired products—links, sizes, colors—and our team will confirm availability and price before ordering.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item active">
-                            <button class="accordion-header">What payment methods are accepted?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    We accept M‑Pesa, bank transfer, and major credit cards. All fees and exchange rates are disclosed upfront for full transparency.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Can I combine multiple retailers?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    Yes—mix and match items from different e‑stores. We consolidate your orders into one shipment to optimize cost and simplify delivery.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <button class="accordion-header">Do you handle returns and exchanges?</button>
-                            <div class="accordion-content">
-                                <p>
-                                    We can manage return requests and exchanges per retailer policies, though customers are responsible for any associated fees.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                   <div class="accordion">
+  <div class="accordion-item">
+    <button class="accordion-header">What is assisted online buying?</button>
+    <div class="accordion-content">
+      <p>
+        Assisted online buying means we help you purchase products from international stores and ship them safely to Kenya.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item active">
+    <button class="accordion-header">How do I place an assisted online buying order?</button>
+    <div class="accordion-content">
+      <p>
+        Send us the product links and details via email or our website form. Our team will handle the purchase and shipping for you.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">What payment options are available?</button>
+    <div class="accordion-content">
+      <p>
+        You can pay via bank transfer, mobile money (M-Pesa), or credit/debit cards. We will provide payment instructions after order confirmation.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">How long does the process take?</button>
+    <div class="accordion-content">
+      <p>
+        From order placement to delivery in Kenya, it typically takes 10 to 20 business days depending on product availability and shipping.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">Can I track my purchase?</button>
+    <div class="accordion-content">
+      <p>
+        Yes, once we buy your product, we provide tracking details so you can monitor shipping progress.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">Are there any restrictions on what I can buy?</button>
+    <div class="accordion-content">
+      <p>
+        Some items like hazardous materials, alcohol, and perishable goods may have restrictions. Contact us to check if your product qualifies.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">What are the costs involved?</button>
+    <div class="accordion-content">
+      <p>
+        Costs include the product price, shipping fees, customs duties, and a service charge for handling your purchase.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">Can I return or exchange items?</button>
+    <div class="accordion-content">
+      <p>
+        Returns depend on the original retailer’s policies. We assist where possible but recommend confirming return policies before purchase.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">How do I get support if I have issues?</button>
+    <div class="accordion-content">
+      <p>
+        Contact our customer service via phone, email, or whatsapp chat for assistance with any questions or concerns.
+      </p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <button class="accordion-header">Is my purchase insured during shipping?</button>
+    <div class="accordion-content">
+      <p>
+        Yes, we offer optional insurance to protect your items against damage or loss during transit.
+      </p>
+    </div>
+  </div>
+</div>
+
                 </div>
             </div>
 
